--- a/autoencoder/Convolutional_Autoencoder.ipynb
+++ b/autoencoder/Convolutional_Autoencoder.ipynb
@@ -146,7 +146,7 @@
     "# Now 28x28x16\n",
     "\n",
     "#logits = tf.layers.dense(inputs=conv6, units=[28, 28])\n",
-    "logits = tf.layers.conv2d(inputs=upsample3, filters=1, kernel_size=kernel_size_, strides=(1, 1), padding='SAME')\n",
+    "logits = tf.layers.conv2d(inputs=conv6, filters=1, kernel_size=kernel_size_, strides=(1, 1), padding='SAME')\n",
     "#Now 28x28x1\n",
     "\n",
     "# Pass logits through sigmoid to get reconstructed image\n",
@@ -37432,7 +37432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
