--- a/transfer-learning/Transfer_Learning.ipynb
+++ b/transfer-learning/Transfer_Learning.ipynb
@@ -740,13 +740,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'codes' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-6e4d1bcc5ee8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mStratifiedShuffleSplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_splits\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0msplitter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcodes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels_vecs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mtrain_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_y\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msplitter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'codes' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "train_x, train_y = \n",
-    "val_x, val_y = \n",
-    "test_x, test_y =  "
+    "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "\n",
+    "ss = StratifiedShuffleSplit(n_splits=1, test_size=0.2)\n",
+    "splitter = ss.split(codes, labels_vecs)\n",
+    "\n",
+    "train_x, train_y = next(splitter)\n",
+    "tmp_x, tmp_y = next(splitter)\n",
+    "val_x, val_y = tmp_x[:367], tmp_y[:367]\n",
+    "test_x, test_y = tmp_x[367:], tmp_y[367:]"
    ]
   },
   {
@@ -794,11 +812,11 @@
     "labels_ = tf.placeholder(tf.int64, shape=[None, labels_vecs.shape[1]])\n",
     "\n",
     "# TODO: Classifier layers and operations\n",
+    "hidden_layer = tf.layers.dense(inputs, 1000)\n",
+    "logits = tf.layer(hidden_layer, labels_vecs.shape[0])# output layer logits\n",
+    "cost = tf.nn.softmax_cross_entropy_with_logits_v2(logits=logits, labels=labels_)# cross entropy loss\n",
     "\n",
-    "logits = # output layer logits\n",
-    "cost = # cross entropy loss\n",
-    "\n",
-    "optimizer = # training optimizer\n",
+    "optimizer = tf.train.AdamOptimizer().minimize(cost)# training optimizer\n",
     "\n",
     "# Operations for validation/test accuracy\n",
     "predicted = tf.nn.softmax(logits)\n",
@@ -859,6 +877,17 @@
     "with tf.Session() as sess:\n",
     "    \n",
     "    # TODO: Your training code here\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    \n",
+    "    epochs = 10\n",
+    "    batch_size = 15\n",
+    "    \n",
+    "    for e in range(epochs):\n",
+    "        #for b in range(len(labels) // batch_size)\n",
+    "        for x, y in get_batches(train_x, train_y)\n",
+    "            batch_cost, _ = sess.run([cost, opt], feed_dict={inputs_: x, labels_: y})\n",
+    "            print(\"Epoch: {}/{}...\".format(e+1, epochs), \"Training loss: {:.4f}\".format(batch_cost))\n",
+    "\n",
     "    saver.save(sess, \"checkpoints/flowers.ckpt\")"
    ]
   },
@@ -992,7 +1021,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   },
   "widgets": {
    "state": {},
