Finished word2vec mini project. Needs training with AWS power.

--- a/embeddings/Skip-Gram_word2vec.ipynb
+++ b/embeddings/Skip-Gram_word2vec.ipynb
@@ -56,7 +56,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import time\n",
@@ -78,7 +80,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Text8 Dataset: 31.4MB [00:47, 666KB/s]                             \n"
+     ]
+    }
+   ],
    "source": [
     "from urllib.request import urlretrieve\n",
     "from os.path import isfile, isdir\n",
@@ -243,7 +253,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# FAILED ATTEMPTS THAT TAUGHT ME A FEW THINGS ABOUT PANDAS\n",
@@ -2080,6 +2092,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Alternative way (from the solution notebook) to reduce incidence of often used words. (much faster)\n",
+    "from collections import Counter\n",
+    "import random\n",
+    "\n",
+    "threshold = 1e-5\n",
+    "word_counts = Counter(int_words)\n",
+    "total_count = len(int_words)\n",
+    "freqs = {word: count/total_count for word, count in word_counts.items()}\n",
+    "p_drop = {word: 1 - np.sqrt(threshold/freqs[word]) for word in word_counts}\n",
+    "train_words = [word for word in int_words if random.random() < (1 - p_drop[word])]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2101,26 +2133,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1223238\n"
+      "4628129\n"
      ]
     }
    ],
    "source": [
     "print(len(train_words))\n",
-    "      \n",
+    "import random as r\n",
+    "\n",
     "def get_target(words, idx, window_size=5):\n",
     "    ''' Get a list of words in a window around an index. '''\n",
     "    \n",
     "    # Your code here\n",
+    "    subwindow_sz = r.randint(1, window_size + 1)\n",
     "    \n",
-    "    return"
+    "    left_boundary = idx - subwindow_sz\n",
+    "    if (left_boundary < 0): left_boundary = 0\n",
+    "    right_boundary = idx + subwindow_sz + 1\n",
+    "    \n",
+    "    words2return = set(words[left_boundary:idx] + words[idx + 1:right_boundary]) # converting to set to sift out duplicate words\n",
+    "    \n",
+    "    return list(words2return) # converting back to list and returning"
    ]
   },
   {
@@ -2132,8 +2172,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_batches(words, batch_size, window_size=5):\n",
@@ -2176,14 +2218,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_graph = tf.Graph()\n",
     "with train_graph.as_default():\n",
-    "    inputs = \n",
-    "    labels = "
+    "    inputs = tf.placeholder(tf.int32, shape=None)\n",
+    "    labels = tf.placeholder(tf.int32, shape=(None, 1))"
    ]
   },
   {
@@ -2208,15 +2252,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_vocab = len(int_to_vocab)\n",
-    "n_embedding =  # Number of embedding features \n",
+    "n_embedding = 200 # Number of embedding features \n",
     "with train_graph.as_default():\n",
-    "    embedding = # create embedding weight matrix here\n",
-    "    embed = # use tf.nn.embedding_lookup to get the hidden layer output"
+    "    #embedding = np.ndarray(shape=(n_vocab, n_embedding), dtype=float)\n",
+    "    embedding = tf.Variable(tf.random_uniform((n_vocab, n_embedding), -1, 1))# create embedding weight matrix here\n",
+    "    embed = tf.nn.embedding_lookup(embedding, inputs) # use tf.nn.embedding_lookup to get the hidden layer output"
    ]
   },
   {
@@ -2238,18 +2283,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Number of negative labels to sample\n",
     "n_sampled = 100\n",
     "with train_graph.as_default():\n",
-    "    softmax_w = # create softmax weight matrix here\n",
-    "    softmax_b = # create softmax biases here\n",
+    "    # AE: softmax_w = tf.nn.softmax(embedding) # create softmax weight matrix here\n",
+    "    # AE: So creating a new weights matrix here instead of using the embedding, because embedding is the matrix between input vector\n",
+    "    # AE: and hidden layer, but here we need between hidden layer and outputs. Just that outputs and inputs happen to be a vector\n",
+    "    # AE: of the same dimensionality\n",
+    "    softmax_w = tf.Variable(tf.truncated_normal((n_vocab, n_embedding), stddev=0.1)) # create softmax weight matrix here\n",
+    "    #softmax_b = tf.Variable(tf.random_uniform([n_vocab], -1, 1))# create softmax biases here\n",
+    "    softmax_b = tf.Variable(tf.zeros(n_vocab))# create softmax biases here\n",
     "    \n",
     "    # Calculate the loss using negative sampling\n",
-    "    loss = tf.nn.sampled_softmax_loss \n",
+    "    # AE: loss = tf.nn.sampled_softmax_loss(softmax_w, softmax_b, labels, inputs, n_sampled, n_vocab)\n",
+    "    # AE: So embed instead of inputs, because our inputs to this softmax layer will be the actual hidden layer from the graph\n",
+    "    # AE: (or rather the portion from the hidden layer that corresponds to our inputs)\n",
+    "    loss = tf.nn.sampled_softmax_loss(softmax_w, softmax_b, labels, embed, n_sampled, n_vocab)\n",
     "    \n",
     "    cost = tf.reduce_mean(loss)\n",
     "    optimizer = tf.train.AdamOptimizer().minimize(cost)"
@@ -2266,8 +2319,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with train_graph.as_default():\n",
@@ -2282,16 +2337,22 @@
     "    valid_dataset = tf.constant(valid_examples, dtype=tf.int32)\n",
     "    \n",
     "    # We use the cosine distance:\n",
+    "    # AE: I guess we normalise the weights here so that they are all between 0 and 1 for example.\n",
     "    norm = tf.sqrt(tf.reduce_sum(tf.square(embedding), 1, keep_dims=True))\n",
     "    normalized_embedding = embedding / norm\n",
     "    valid_embedding = tf.nn.embedding_lookup(normalized_embedding, valid_dataset)\n",
+    "    \n",
+    "    # AE: What a wonderful way to calculate similarity of two matrices!!!! :)\n",
+    "    # AE: Or in this case how much of normalisation was neccessary\n",
     "    similarity = tf.matmul(valid_embedding, tf.transpose(normalized_embedding))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# If the checkpoints directory doesn't exist:\n",
@@ -2311,7 +2372,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10 Iteration: 100 Avg. Training loss: 5.6723 0.9492 sec/batch\n",
+      "Epoch 1/10 Iteration: 200 Avg. Training loss: 5.5837 0.9494 sec/batch\n",
+      "Epoch 1/10 Iteration: 300 Avg. Training loss: 5.4924 0.9524 sec/batch\n",
+      "Epoch 1/10 Iteration: 400 Avg. Training loss: 5.6036 0.9473 sec/batch\n"
+     ]
+    }
+   ],
    "source": [
     "epochs = 10\n",
     "batch_size = 1000\n",
@@ -2352,6 +2424,8 @@
     "                for i in range(valid_size):\n",
     "                    valid_word = int_to_vocab[valid_examples[i]]\n",
     "                    top_k = 8 # number of nearest neighbors\n",
+    "                    # AE: finding weights in the matrix that needed least normalisation and we'll then\n",
+    "                    # AE: find the corresponding words to that matrix\n",
     "                    nearest = (-sim[i, :]).argsort()[1:top_k+1]\n",
     "                    log = 'Nearest to %s:' % valid_word\n",
     "                    for k in range(top_k):\n",
@@ -2374,7 +2448,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with train_graph.as_default():\n",
@@ -2397,7 +2473,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -2410,7 +2488,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "viz_words = 500\n",
@@ -2421,9 +2501,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "# AE: Calculates X and Y coordinates in a 2D plane from the 200 deep weight vector that we have for each word.\n",
+    "# AE: We do that for the first 500 words only though.\n",
+    "# AE: And then finally we plot each of those 500 words according to the calculated cooordinates.\n",
     "fig, ax = plt.subplots(figsize=(14, 14))\n",
     "for idx in range(viz_words):\n",
     "    plt.scatter(*embed_tsne[idx, :], color='steelblue')\n",
