Sentiment RNN getting input data right

--- a/sentiment-rnn/Sentiment_RNN.ipynb
+++ b/sentiment-rnn/Sentiment_RNN.ipynb
@@ -33,8 +33,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open('../sentiment-network/reviews.txt', 'r') as f:\n",
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -245,17 +247,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2287959, 6015634, 6020195, 6020170, 6005621, 6013460, 6020180, 6003912, 6020174, 6020166, 6018044, 6020193, 6020107, 6020139, 6020049, 5991273, 6019751, 6015635, 6018542, 6017437, 6020107, 6005105, 6020143, 6019526, 6020091, 6020166, 5988232, 5703051, 6018165, 6019810, 6020114, 6019578, 6020161, 2287959, 6015634, 6020111, 6004283, 6020195, 6018120, 6001326, 6020114, 6016559, 6019717, 6020195, 6005105, 6020166, 5662306, 6020114, 6017749, 5813784, 6020166, 5936862, 6004524, 6019920, 6019933, 6019562, 6019248, 6012521, 6019683, 6011284, 6005105, 4500045, 6020166, 2270068, 6020150, 6020166, 6020093, 6003731, 6020079, 5986941, 6019810, 6020150, 6020166, 5972567, 6020120, 6009659, 6020152, 6019683, 6004524, 6019859, 6020120, 6019153, 6020166, 6017604, 6020091, 6018535, 6020170, 5989973, 6011681, 6006311, 6020114, 6006581, 6020014, 6020166, 6015635, 6020120, 6015281, 5916356, 6020174, 6015634, 6020170, 6017794, 6020088, 5887333, 6020120, 6019609, 6019359, 6020114, 5816424, 6020054, 6020150, 6020192, 6005105, 5989973, 5962446, 6020114, 2287959, 6015634, 6020120, 6014784, 6020161, 6017737, 6017429, 6020150, 6020143, 6013864, 6020141, 6020161, 2287959, 6015634, 6020195, 6020106, 6004188, 6018305, 6020170, 5965026, 6020161, 6020180, 6018035, 6020190]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create your dictionary that maps vocab words to integers here\n",
-    "vocab_to_int = \n",
+    "# AE: we combine the list of words with a range of 1 to (number of words + 1) and then create\n",
+    "# AE: a dictionary from that combination so we'll get (for example): {'one': 1, 'two': 2, 'three': 3}\n",
+    "vocab_to_int = dict(zip(words, range(1, len(words) + 1)))\n",
     "\n",
+    "reviews_ints = []\n",
     "# Convert the reviews to integers, same shape as reviews list, but with integers\n",
-    "reviews_ints = "
+    "for r in reviews:\n",
+    "    converted_rv = [vocab_to_int[c] for c in r.split()]\n",
+    "    reviews_ints.append(converted_rv)\n",
+    "\n",
+    "print(reviews_ints[0])"
    ]
   },
   {
@@ -271,12 +286,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0]\n"
+     ]
+    }
+   ],
    "source": [
+    "with open('../sentiment-network/labels.txt', 'r') as f:\n",
+    "    labels = f.read()\n",
+    "\n",
     "# Convert labels to 1s and 0s for 'positive' and 'negative'\n",
-    "labels = "
+    "labels = labels.split('\\n')\n",
+    "#print(labels[:20])\n",
+    "bln_lbls = []\n",
+    "for lbl in labels:\n",
+    "    if lbl == 'positive': \n",
+    "        bln_lbls.append(1)\n",
+    "    else:\n",
+    "        bln_lbls.append(0)\n",
+    "\n",
+    "labels = bln_lbls\n",
+    "print(labels[:150])\n",
+    "\n",
+    "# AE: alternative from solutins notebook: labels = np.array([1 if each == 'positive' else 0 for each in labels])"
    ]
   },
   {
@@ -288,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -318,12 +356,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25001\n",
+      "25000\n"
+     ]
+    }
+   ],
    "source": [
+    "print(len(reviews_ints))\n",
     "# Filter out that review with 0 length\n",
-    "reviews_ints = "
+    "#reviews_ints = [rv if (len(rv) > 0): for rv in reviews_ints]\n",
+    "reviews_ints_filtered = []\n",
+    "lbls_filtered = labels\n",
+    "for rv in reviews_ints:\n",
+    "    if len(rv) > 0: \n",
+    "        reviews_ints_filtered.append(rv)\n",
+    "        #lbls_filtered.append(labels)\n",
+    "\n",
+    "reviews_ints = reviews_ints_filtered\n",
+    "print(len(reviews_ints))"
    ]
   },
   {
@@ -339,7 +396,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "seq_len = 200\n",
@@ -512,7 +571,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "split_frac = 0.8\n",
@@ -587,7 +648,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n_words = len(vocab_to_int) + 1 # Adding 1 because we use 0's for padding, dictionary started at 1\n",
@@ -616,7 +679,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Size of the embedding vectors (number of units in the embedding layer)\n",
@@ -673,7 +738,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with graph.as_default():\n",
@@ -713,7 +780,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with graph.as_default():\n",
@@ -732,7 +801,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with graph.as_default():\n",
@@ -754,7 +825,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with graph.as_default():\n",
@@ -799,7 +872,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "epochs = 10\n",
@@ -850,7 +925,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test_acc = []\n",
@@ -884,7 +961,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
