Committing a forgotten change. Finished the Transfer learning mini project.

--- a/transfer-learning/Transfer_Learning.ipynb
+++ b/transfer-learning/Transfer_Learning.ipynb
@@ -27,10 +27,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Parameter file already exists!\n"
+      "VGG16 Parameters: 553MB [09:25, 979KB/s]                                \n"
      ]
     }
    ],
@@ -75,7 +75,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Flowers Dataset: 229MB [02:33, 1.49MB/s]                              \n"
+     ]
+    }
+   ],
    "source": [
     "import tarfile\n",
     "\n",
@@ -662,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -760,14 +768,16 @@
      "text": [
       "Train shapes (x, y): (2936, 4096) (2936, 5)\n",
       "Validation shapes (x, y): (367, 4096) (367, 5)\n",
-      "Test shapes (x, y): (367, 4096) (367, 5)\n"
+      "Test shapes (x, y): (367, 4096) (367, 5)\n",
+      "Labels_vecs shape: (3670, 5)\n"
      ]
     }
    ],
    "source": [
     "print(\"Train shapes (x, y):\", train_x.shape, train_y.shape)\n",
     "print(\"Validation shapes (x, y):\", val_x.shape, val_y.shape)\n",
-    "print(\"Test shapes (x, y):\", test_x.shape, test_y.shape)"
+    "print(\"Test shapes (x, y):\", test_x.shape, test_y.shape)\n",
+    "print(\"Labels_vecs shape:\", labels_vecs.shape)"
    ]
   },
   {
@@ -8434,14 +8444,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"vgg\" object already exists.  Will not create again.\n"
+      "/home/arturs/deep_learning/course/transfer-learning/tensorflow_vgg/vgg16.npy\n",
+      "npy file loaded\n",
+      "build model started\n"
      ]
     }
    ],
@@ -8553,7 +8565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   },
   "widgets": {
    "state": {},
