Updated a comment in the discriminator, where I now reshape to 4x4x128 instead of 3x3x128

--- a/face_generation/dlnd_face_generation.ipynb
+++ b/face_generation/dlnd_face_generation.ipynb
@@ -319,6 +319,10 @@
     "        # AE: We'll be using padding='VALID' here to drop the remaining pixel when we want to downscale 7x7 image into\n",
     "        # AE: a 3x3 one. That way the kernel window will ignore the last row and last column, instead of adding an extra\n",
     "        # AE: one with a copy of the previous row and column.\n",
+    "        # AE:\n",
+    "        # AE: Actually, what I described above was a bad idea. It's better to have padding='SAME' and \n",
+    "        # AE: use all information in the tensor. Later we'll reshape it to 4x4x128 instead of 3x3x128 and\n",
+    "        # AE: we'll get better results.\n",
     "        c3 = tf.contrib.layers.conv2d(inputs=c2, num_outputs=128, kernel_size=3, stride=2, padding='SAME', activation_fn=None) # activation_fn=tf.nn.relu\n",
     "        c3 = tf.layers.batch_normalization(inputs=c3, momentum=0.99, epsilon=0.001, training=True)\n",
     "        # AE: Applying leaky relu\n",
@@ -1957,7 +1961,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
